<resources>
    <string name="app_name">ShareWheels</string>

    <!--    Strings for register screen-->
    <string name="err_msg_enter_first_name">Please enter your first name.</string>
    <string name="err_msg_enter_last_name">Please enter your last name.</string>
    <string name="err_msg_enter_email">Please enter your email address.</string>
    <string name="err_msg_enter_password">Please enter the password.</string>
    <string name="err_msg_enter_confirm_password">Please confirm your password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password do not match.</string>
    <string name="err_msg_invalid_email">Format of your email seems to be incorrect. Please enter a valid email address. </string>
    <string name="err_msg_email_already_in_use">This email address is already registered with us. Please login with this address or use a new address.</string>
    <string name="registration_details_are_valid">"You have been registered successfully!"</string>

    <!--    Strings for Login screen-->
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email">Please enter your email address</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="login_button_label">Login</string>
    <string name="account_absent">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <!--    Strings for Forgot password screen-->
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="forgot_password_title_description">Enter your registered email address in order to receive a link to reset your password.</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>

    <!--    Strings for MainActivity -->
    <string name="main_activity_title">Welcome to your dashboard! Ready to hit the road? Start sharing your journey with ShareWheels and drive the change. 🚗✨</string>
    <string name="driver_button_lbl">I am Driving Today 🚗</string>
    <string name="rider_button_lbl">I am Riding Along 🚶</string>
    <string name="settings_button_lbl">My Account 🛠️</string>
    <string name="myrides_button_lbl">View my rides </string>

    <string name="title_pending_rides">Pending Rides</string>
    <string name="title_home">Home</string>
    <string name="title_active_rides">Active Rides</string>
    <string name="title_completed_rides">Completed Rides</string>

</resources>