<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_active_rides">

    <fragment
        android:id="@+id/navigation_pending_rides"
        android:name="edu.uga.cs.sharewheels.fragments.PendingRidesFragment"
        android:label="@string/title_pending_rides"
        tools:layout="@layout/fragment_pending_rides" />

    <fragment
        android:id="@+id/navigation_active_rides"
        android:name="edu.uga.cs.sharewheels.fragments.ActiveRidesFragment"
        android:label="@string/title_active_rides"
        tools:layout="@layout/fragment_active_rides" />

    <fragment
        android:id="@+id/navigation_completed_rides"
        android:name="edu.uga.cs.sharewheels.fragments.CompletedRidesFragment"
        android:label="@string/title_completed_rides"
        tools:layout="@layout/fragment_completed_rides" />
</navigation>